--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ Greys: #555
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
@@ -57,7 +57,7 @@ body {
 }
 .heading-primary {
   font-size: 3.2rem;
-  font-weight: 600;
+  font-weight: 700;
   color: #333;
   line-height: 1.05;
   letter-spacing: -0.5px;
@@ -78,6 +78,7 @@ body {
   border-radius: 0.5rem;
   text-decoration: none;
   transition: all 1s;
+  font-weight: 600;
 }
 
 .btn--full:link,
@@ -111,4 +112,36 @@ body {
 
 .margin-right-sm {
   margin-right: 0.92rem !important;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 0.94rem;
+  margin-top: 4.96rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 2.96rem;
+  width: 2.96rem;
+  border-radius: 50%;
+  margin-right: -0.94rem;
+  border: 3px solid #fdf2e9;
+}
+
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+.delivered-text {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 800;
 }
