--- a/css/style.css
+++ b/css/style.css
@@ -42,19 +42,9 @@ body {
   color: #555;
 }
 
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 5.92rem 0;
-}
+/************************/
+/* GEneral Components */
 
-.hero {
-  max-width: 81.2rem;
-  display: grid;
-  margin: 0 auto;
-  gap: 5.92rem;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
 .heading-primary {
   font-size: 3.2rem;
   font-weight: 700;
@@ -62,12 +52,6 @@ body {
   line-height: 1.05;
   letter-spacing: -0.5px;
   margin-bottom: 1.9rem;
-}
-
-.hero-description {
-  font-size: 1.24rem;
-  line-height: 1.5;
-  margin-bottom: 2.97rem;
 }
 
 .btn:link,
@@ -105,13 +89,55 @@ body {
   /* trick to insert border inside */
   box-shadow: inset 0 0 0 3px #fff;
 }
+.margin-right-sm {
+  margin-right: 0.92rem !important;
+}
+/************************/
+
+/************************/
+/** Header Component ***/
+.logo {
+  height: 1.53rem;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  height: 5.1rem;
+  padding: 0 3.02rem;
+}
+
+/************************/
+
+/************************/
+/* Hero Components */
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 2.92rem 0;
+}
+
+.hero {
+  max-width: 81.2rem;
+  display: grid;
+  margin: 0 auto;
+  padding: 0 2rem;
+  gap: 5.92rem;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.hero-description {
+  font-size: 1.24rem;
+  line-height: 1.5;
+  margin-bottom: 2.97rem;
+}
 
 .hero-img {
   width: 100%;
-}
-
-.margin-right-sm {
-  margin-right: 0.92rem !important;
 }
 
 .delivered-meals {
@@ -145,3 +171,5 @@ body {
   color: #cf711f;
   font-weight: 800;
 }
+
+/************************/
