--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
 .heading-secondary {
 font-size: 2.8rem;
 line-height: 1.2;
-margin-bottom: 7.5rem;
+margin-bottom: 4.8rem;
 }
 
 .sub-heading {
@@ -271,6 +271,39 @@ margin-bottom: 2rem;
 
 /********************/
 
+
+
+/* FEATURED IN */
+
+.section-feature {
+  padding: 3.2rem 0;
+  box-shadow: 3px 3px 30px rgb(0 0 0 / 0.2);
+  margin: 50px 50px 25px
+}
+
+.heading-featured-in {
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: .75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 1.8rem;
+  color:#cf711f;
+  
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logos img {
+  height: 2.1rem;
+  filter: grayscale(100%);
+  opacity: 0.7;
+}
+
+
 /* How it works */
 
 .section-how {
@@ -319,6 +352,9 @@ z-index: -1;
 }
 .step-img {
 width: 35%;
+}
+.howitwork-container {
+text-align: center;
 }
 
 .step-description {
