added pricing mail and footer

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,19 @@ body {
   line-height: 1.2;
   margin-bottom: 2rem;
 }
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 9px;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
+}
 
 .btn:link,
 .btn:visited {
@@ -121,7 +134,7 @@ body {
 }
 
 .container {
-  max-width: 76.8rem;
+  max-width: 72rem;
   margin: 0 auto;
   padding: 0 2rem;
 }
@@ -434,18 +447,18 @@ strong {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 1.2rem;
+  gap: 0.8rem;
 }
 .list-item {
-  font-size: 1.4rem;
+  font-size: 1rem;
   display: flex;
   align-items: center;
   gap: 0.8rem;
 }
 
 .list-icon {
-  width: 2.2rem;
-  height: 2.2rem;
+  width: 1.8rem;
+  height: 1.8rem;
   color: #e67e22;
 }
 
@@ -538,4 +551,221 @@ img {
 
 .gallery-item img:hover {
   transform: scale(1.1);
+}
+
+.section-pricing {
+  padding: 6.5rem 0rem;
+}
+
+.pricing-plan {
+  border-radius: 11px;
+  width: 75%;
+}
+.pricing-plan--starter {
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+  padding: 3.6rem;
+}
+.plan-header {
+  text-align: center;
+  margin-bottom: 3.8rem;
+}
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 2.2rem;
+}
+.plan-price {
+  font-size: 3rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.2rem;
+}
+.plan-text {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-sing-up {
+  text-align: center;
+  margin-top: 3.8rem;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 3.6rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  content: "Best value";
+  position: absolute;
+  top: 7%;
+  right: -18%;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 700;
+  color: #333;
+  background-color: #ffd43b;
+  padding: 0.5rem 5rem;
+  transform: rotate(45deg);
+}
+
+.feature-icon {
+  color: #e67e22;
+  height: 1.8rem;
+  width: 1.8rem;
+  background-color: #fdf2e9;
+  margin-bottom: 2.8rem;
+  padding: 0.8rem;
+  border-radius: 50%;
+}
+
+.feature-title {
+  font-size: 1.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.2rem;
+}
+.feature-text {
+  font-size: 1rem;
+  line-height: 1.4;
+}
+
+.plan-details {
+  font-size: 1rem;
+  line-height: 1.6;
+  text-align: center;
+  margin-bottom: 5.5rem;
+}
+
+.section-cta {
+  /* padding: 9.6rem 0 12.8rem 0; */
+  padding: 3.8rem 0 10.8rem;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: #e67e22; */
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  overflow: hidden;
+}
+.cta-text-box {
+  padding: 3rem 2.4rem 3.5rem 2.4rem;
+  color: #45260a;
+}
+
+.cta-text {
+  font-size: 1rem;
+  line-height: 1.8;
+  margin-bottom: 2.5rem;
+}
+.cta .heading-secondary {
+  /* color: #45260a; */
+  color: inherit;
+  margin-bottom: 1.5rem;
+}
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 2rem;
+  row-gap: 1.4rem;
+}
+.cta-form label {
+  display: block;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 0.6rem;
+  font-size: 1.1rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 0.6rem;
+}
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url(../public/img/eating.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.footer {
+  padding: 8.8rem 0;
+  border-top: 1px solid #eee;
+}
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+.footer-heading {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 0.9rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+.contacts {
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 1.2;
+}
+
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 1.8rem;
+}
+.footer-logo {
+  display: block;
+  margin-bottom: 2.2rem;
+}
+.copyright {
+  font-size: 0.9rem;
+  line-height: 1.2;
+  color: #767676;
+  margin-top: auto;
+}
+.address {
+  margin-bottom: 1.8rem;
 }
